# CThaiNLP

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
cthainlp/: __init__.py  newmm.py  tokenize.py
data/: thai_words.txt
examples/: example_basic.c
examples/python/: README.md  benchmark.py  example_basic.py
include/: newmm.h
python/: cthainlp_wrapper.c
src/: newmm.c  tcc.c  tcc.h  trie.c  trie.h
tests/: test_newmm.c
tests/python/: test_tokenize.py
