[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cthainlp"
version = "0.1.0"
description = "Python bindings for CThaiNLP - Thai Natural Language Processing library in C"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "Wannaphong Phatthiyaphaibun"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/wannaphong/CThaiNLP"
Repository = "https://github.com/wannaphong/CThaiNLP"
